tests/reference/asr_preprocess-cpp2-a8d63da.stderr
semantic error: Variable 'yy' not declared
 --> tests/errors/cpp2.f90:7:19
  |
7 | print *, x, X123, yy
  |                   ^^ Variable 'yy' not declared
